--- a/project-2 this is transit/stil/stillerim.css
+++ b/project-2 this is transit/stil/stillerim.css
@@ -26,7 +26,7 @@ body{
 
 header{
 	padding-top: 10px;
-	width: 100%;
+	max-width: 100%;
 	height: 100vh;
 	background: url("../images/dark_tint.png") , url("../images/bokeh_car_lights_bg.jpg") ;
 	background-size: cover;
@@ -112,19 +112,25 @@ nav ul li a:hover{
 	background:#2382A2;
 }
 @media screen and (max-width: 768px){
+	header{
+		height: 70vh;
+	}
 	nav ul li{
 		padding: 2px 0px;
 	}
 	.icerik{
 		margin-top: 50px;
+		margin-bottom: 220px;
 	}
 	.icerik h2{
 		font-size: 8vw;
 	}
 	.icerik p{
+		padding: 0px 10px;
 		font-size: 4vw;
 	}
 }
+
 
 /* -------------- 1. Bölüm Sonu----------- */
 .bolum2{
